fix: Replace deprecated Runtime.exec()